[package]
name = "cyber_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时 - 精简到所需的核心功能
tokio = { version = "1.35", features = ["rt-current-thread", "macros", "net", "sync", "time"] } 

# API 框架
axum = "0.7"
# 数据序列化/反序列化
serde = { version = "1.0", features = ["derive"] }

# SQLite 数据库驱动
rusqlite = { version = "0.30", features = ["bundled"] } # ✅ 关键：确保启用了 bundled

# CLI 命令行解析
clap = { version = "4.4", features = ["derive"] }

# 终端输出增强
colored = "2.0" 

# --- 交叉编译稳定性及体积优化 (最佳实践) ---
[profile.release]
# 核心修复：解决 -lunwind 链接问题。
panic = "abort" 

# 体积优化
opt-level = "z"

# 链接时间优化 (LTO)
lto = true

# LTO 增强
codegen-units = 1

# 移除符号表
strip = "symbols"
