[package]
name = "cyber_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时 - 精简到所需的核心功能
tokio = { version = "1.35", features = ["rt-current-thread", "macros", "net", "sync", "time"] } 

# API 框架
axum = "0.7"
# 数据序列化/反序列化
serde = { version = "1.0", features = ["derive"] }

# SQLite 数据库驱动
# 修正：移除 features = ["bundled"]，使用 NDK 系统库。
rusqlite = { version = "0.30" } 

# CLI 命令行解析
clap = { version = "4.4", features = ["derive"] }

# 终端输出增强
colored = "2.0" 


# --- 交叉编译稳定性及体积优化 (最佳实践) ---
[profile.release]
# 核心修正：解决 Android 目标上找不到 libunwind/libgcc 的链接问题。
panic = "abort" 

# 体积优化
opt-level = "z"

# 链接时间优化 (LTO)
lto = true

# LTO 增强
codegen-units = 1

# 移除符号表
strip = "symbols"

# ⚠️ 关键移除：请确保文件中**没有** [target.aarch64-linux-android] 区块，避免与 cross 冲突。
