[package]
name = "cyber_lookup"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] } 

# API 框架
axum = "0.7"
# 数据序列化/反序列化
serde = { version = "1.0", features = ["derive"] }

# SQLite 数据库驱动
# 终极修复：启用 'bundled' 功能，强制 rusqlite 静态编译 SQLite 库，消除对 Docker 容器内系统库的依赖。
rusqlite = { version = "0.30", features = ["bundled"] } 

# CLI 命令行解析
clap = { version = "4.4", features = ["derive"] }

# 终端输出增强
colored = "2.0" 

# --- 交叉编译稳定性及体积优化 (最佳实践) ---
[profile.release]
# 核心修复：解决 'cannot find -lunwind' 链接错误，必须使用 "abort" 策略。
panic = "abort" 

# 体积优化
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
